[gd_scene load_steps=7 format=3 uid="uid://6vo508oj4fra"]

[ext_resource type="Script" uid="uid://cbe60qhkvs4a0" path="res://character_select.gd" id="1_6yhuy"]
[ext_resource type="Texture2D" uid="uid://cpqyqgr7php2f" path="res://art/atomic_petanque/players/gégé_moustache_de_feu.png" id="1_tddig"]
[ext_resource type="FontFile" uid="uid://b00c3n5argown" path="res://fonts/Xolonium-Regular.ttf" id="2_5duen"]
[ext_resource type="Texture2D" uid="uid://dskvcub7tgbhq" path="res://art/atomic_petanque/controller_icons/wasd.png" id="4_aoibv"]

[sub_resource type="Shortcut" id="Shortcut_mn8d4"]

[sub_resource type="Shortcut" id="Shortcut_aoibv"]

[node name="CharacterSelect" type="Control"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.5
offset_top = -45.0
offset_right = 425.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6yhuy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -419.5
offset_top = -39.0
offset_right = 419.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ControllerIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_aoibv")
expand_mode = 3

[node name="CharacterIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_tddig")
expand_mode = 3

[node name="CharacterName" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5duen")
theme_override_font_sizes/font_size = 64
text = "Gégé"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChangeCharacter" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5duen")
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_mn8d4")
text = "Change character"

[node name="SelectCharacter" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5duen")
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_aoibv")
text = "Select"

[connection signal="pressed" from="HBoxContainer/ChangeCharacter" to="." method="_on_change_character_pressed"]
[connection signal="pressed" from="HBoxContainer/SelectCharacter" to="." method="_on_select_character_pressed"]
